--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>welcome to header</p>
+<mat-toolbar color="primary">
+  <button mat-icon-button class="menu-icon" aria-label="menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <img src="assets/icons/SOS360.svg" alt="SOS360 Logo" class="sos-logo">
+  <button mat-icon-button class="logout-button" aria-label="Log Out">
+    <mat-icon>exit_to_app</mat-icon>
+  </button>
+</mat-toolbar>
+
+<br>
+<p>Admin page</p>
+
