--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="cover-all" *ngIf="!showLogin">
   <app-header></app-header>
-  <router-outlet></router-outlet>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
   <app-footer></app-footer>
 </div>
 
