--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="header">
   <button mat-icon-button class="menu-icon" aria-label="menu icon">
     <mat-icon>menu</mat-icon>
   </button>
@@ -7,7 +7,3 @@
     <mat-icon>exit_to_app</mat-icon>
   </button>
 </mat-toolbar>
-
-<br>
-<p>Admin page</p>
-
