--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,11 @@
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .sos-logo {
-  width: 100px;
-  height: 100px;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
