--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,12 @@
     <mat-icon>menu</mat-icon>
   </button>
   <img src="assets/icons/SOS360.svg" alt="SOS360 Logo" class="sos-logo">
-  <button mat-icon-button class="logout-button" aria-label="Log Out">
-    <mat-icon>exit_to_app</mat-icon>
-  </button>
+  <div class="right-buttons">
+    <button mat-icon-button class="language-button" aria-label="Change language">
+      <mat-icon>language</mat-icon>
+    </button>
+    <button mat-icon-button class="logout-button" aria-label="Log Out">
+      <mat-icon>exit_to_app</mat-icon>
+    </button>
+  </div>
 </mat-toolbar>
