--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,3 +10,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.right-buttons {
+  display: flex;
+  align-items: center;
+  gap: 8px; /* Espaçamento entre os botões */
+}
