--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,12 @@
-<p>
-  admin works!
-</p>
+<div class="container">
+  <h2>Administração</h2>
+  <p>
+    Lista de usuários cadastrados no sistema.
+  </p>
+  <section>
+    <div class="button-row">
+      <button mat-raised-button (click)="navigateToAddUser()">Adicionar usuário</button>
+    </div>
+  </section>
+  <app-userTable></app-userTable>
+</div>
