--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
   .container {
     display: flex;
     flex: 1;  // Take up the remaining space in the .cover-all container
-    overflow: hidden; // Ensure that the overflow is hidden to prevent unnecessary scrollbars
+    overflow-y: auto; // Ensure that the overflow is hidden to prevent unnecessary scrollbars
     background-color: transparent !important;
   }
 
