--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,3 @@
-<mat-toolbar color="primary">
-  <section class="main text-color">
-    Developed by Team Oscar - UNIFESP | 2024 | All rights reserved | Terms of Service | Privacy Policy | Version 1.0.0
-  </section>
-</mat-toolbar>
+<section class="main text-color">
+  Developed by @OSCAR | 2024 | All rights reserved | Terms of Service | Privacy Policy | Version 1.0.0
+</section>
