--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 <div class="cover-all" *ngIf="!showLogin">
-  <app-header></app-header>
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
-  <app-footer></app-footer>
+  <app-header (ToggleSideNav)="drawer.toggle()"></app-header>
+  <mat-drawer-container class="container" autosize>
+    <mat-drawer #drawer class="sidenav" mode="side">
+      <app-sidenav *ngFor="let item of navItems" [item]="item"></app-sidenav>
+    </mat-drawer>
+    <mat-drawer-content class="content">
+      <router-outlet></router-outlet>
+      <app-footer></app-footer>
+    </mat-drawer-content>
+  </mat-drawer-container>
 </div>
 
 <div class="cover-all-login" *ngIf="showLogin">
