--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,8 +8,28 @@
   .container {
     display: flex;
     flex: 1;  // Take up the remaining space in the .cover-all container
-    overflow-y: auto; // Ensure that the overflow is hidden to prevent unnecessary scrollbars
+    overflow: hidden; // Ensure that the overflow is hidden to prevent unnecessary scrollbars
     background-color: transparent !important;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;  // Take up the remaining space in the .container
+    overflow-y: auto;  // Enable scrolling within the content area if needed
+  }
+
+  .mat-drawer-content {
+    width: 100%;
+    justify-content: flex-start;
+    flex: 1;  // Ensure it takes up the remaining space within the .content
+  }
+
+  .sidenav {
+    padding: 20px;
+    width: 250px; // Define a width for the sidenav if needed
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
+    border: none;
   }
 
   app-header {
