--- a/src/app/userTable/userTable.component.html
+++ b/src/app/userTable/userTable.component.html
@@ -3,7 +3,7 @@
   <input matInput (keyup)="applyFilter($event)" placeholder="Ex. SAMU" #input>
 </mat-form-field>
 
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8" class="user-table">
   <table mat-table [dataSource]="dataSource" matSort>
 
     <!-- ID Column -->
@@ -32,7 +32,7 @@
 
     <!-- Delete Column -->
     <ng-container matColumnDef="delete">
-      <th mat-header-cell *matHeaderCellDef>  </th>
+      <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row">
         <button mat-icon-button (click)="deleteUser(row.id)">
           <mat-icon>delete</mat-icon>
@@ -51,4 +51,3 @@
 
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
 </div>
-
