--- a/src/app/shared/dark-mode-toggle/dark-mode-toggle.component.html
+++ b/src/app/shared/dark-mode-toggle/dark-mode-toggle.component.html
@@ -1,2 +1,2 @@
-<input type="checkbox" [checked]="darkMode$ | async" (change)="onToggle()" class="check_box" id="checkbox">
+<input type="checkbox" [checked]="darkMode$ | async" (change)="onToggle()" class="check_box" id="checkbox" title="Toggle Dark Mode">
   <label for="checkbox" class="label">
