Fix page headers and add service icons

--- a/src/app/ambulance/ambulance.component.html
+++ b/src/app/ambulance/ambulance.component.html
@@ -1,3 +1,7 @@
-<p>
-  ambulance works!
-</p>
+<section class="ambulance">
+  <div class="title-image-container">
+    <span class="text-color title roboto-regular">{{ 'sidenav.ambulancePanel' | translate }}</span>
+    <img src="assets/icons/ambulance.svg" alt="Ambulance Icon" class="title-icon">
+  </div>
+  <p>{{ 'ambulance.msg' | translate }}</p>
+</section>
