--- a/src/app/firefighter/firefighter.component.html
+++ b/src/app/firefighter/firefighter.component.html
@@ -1,3 +1,7 @@
-<p>
-  firefighter works!
-</p>
+<section class="firefighter">
+  <div class="title-image-container">
+    <span class="text-color title roboto-regular">{{ 'sidenav.firefighterPanel' | translate }}</span>
+    <img src="assets/icons/firefighter.svg" alt="Firefighter Icon" class="title-icon">
+  </div>
+  <p>{{ 'firefighter.msg' | translate }}</p>
+</section>
