--- a/src/app/police/police.component.html
+++ b/src/app/police/police.component.html
@@ -1,3 +1,7 @@
-<p>
-  police works!
-</p>
+<section class="police">
+  <div class="title-image-container">
+    <span class="text-color title roboto-regular">{{ 'sidenav.policePanel' | translate }}</span>
+    <img src="assets/icons/police.svg" alt="Police Icon" class="title-icon">
+  </div>
+  <p>{{ 'police.msg' | translate }}</p>
+</section>
