--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,8 +3,60 @@
   <p>{{ 'admin.msg' | translate }}</p>
   <section>
     <div class="button-row">
-      <button mat-raised-button [routerLink]="['/adduser']" >{{ 'admin.addUserBtn' | translate }}</button>
+      <button mat-raised-button [routerLink]="['/adduser']">{{ 'admin.addUserBtn' | translate }}</button>
     </div>
   </section>
-  <app-userTable></app-userTable>
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. SAMU" #input>
+  </mat-form-field>
+
+  <div class="mat-elevation-z8" class="user-table">
+    <table mat-table [dataSource]="dataSource" matSort>
+
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'admin.idLabel' | translate }}</th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'admin.nameLabel' | translate }}</th>
+        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      </ng-container>
+
+      <!-- Email Column -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'admin.emailLabel' | translate }}</th>
+        <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+      </ng-container>
+
+      <!-- Service Column -->
+      <ng-container matColumnDef="service">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'admin.serviceLabel' | translate }}</th>
+        <td mat-cell *matCellDef="let row"> {{row.service}} </td>
+      </ng-container>
+
+      <!-- Delete Column -->
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef>{{ 'admin.deleteLabel' | translate }}</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button (click)="deleteUser(row.id)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  </div>
 </section>
