--- a/src/app/ambulance/ambulance.component.html
+++ b/src/app/ambulance/ambulance.component.html
@@ -1,7 +1,91 @@
 <section class="ambulance">
   <div class="title-image-container">
-    <span class="text-color title roboto-regular">{{ 'sidenav.ambulancePanel' | translate }}</span>
     <img src="assets/icons/ambulance.svg" alt="Ambulance Icon" class="title-icon">
+    <span class="text-color title roboto-regular">{{ 'sidenav.ambulancePanel' | translate }}</span>
   </div>
   <p>{{ 'ambulance.msg' | translate }}</p>
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. SAMU" #input>
+  </mat-form-field>
+
+  <div class="mat-elevation-z8" class="ambulance-table">
+    <table mat-table
+      [dataSource]="dataSource"
+      matSort multiTemplateDataRows
+      class="mat-elevation-z8">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'view-notifications.columns.id' | translate }} </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+    <ng-container matColumnDef="requester">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'view-notifications.columns.requester' | translate }} </th>
+      <td mat-cell *matCellDef="let element"> {{element.requester.name}} </td>
+    </ng-container>
+    <ng-container matColumnDef="attendant">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'view-notifications.columns.attendant' | translate }} </th>
+      <td mat-cell *matCellDef="let element"> {{element.attendant?.name}} </td>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'view-notifications.columns.status' | translate }} </th>
+      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+    </ng-container>
+    <ng-container matColumnDef="createdAt">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'view-notifications.columns.createdAt' | translate }} </th>
+      <td mat-cell *matCellDef="let element"> {{element.createdAt | date}} </td>
+    </ng-container>
+    <ng-container matColumnDef="updatedAt">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'view-notifications.columns.updatedAt' | translate }} </th>
+      <td mat-cell *matCellDef="let element"> {{element.updatedAt | date}} </td>
+    </ng-container>
+    <!-- New Action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-raised-button color="primary" (click)="attend(element.id); $event.stopPropagation()">
+          {{ 'police.attend' | translate }}
+        </button>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="expand">
+      <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button aria-label="expand row" (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()">
+          <mat-icon *ngIf="expandedElement !== element">keyboard_arrow_down</mat-icon>
+          <mat-icon *ngIf="expandedElement === element">keyboard_arrow_up</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+    <ng-container matColumnDef="expandedDetail">
+      <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayWithExpand.length">
+        <div class="element-detail"
+             [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+          <div class="element-requester-details">
+            <p><strong>{{ 'view-notifications.expanded.description' | translate }}</strong> {{element.description}}</p>
+            <p><strong>{{ 'view-notifications.expanded.cpf' | translate }}</strong> {{element.requester.cpf}}</p>
+            <p><strong>{{ 'view-notifications.expanded.phone' | translate }}</strong> {{element.requester.phone}}</p>
+            <p><strong>{{ 'view-notifications.expanded.address' | translate }}</strong> {{element.requester.address}}</p>
+          </div>
+        </div>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+    <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;"
+        class="element-row"
+        [class.expanded-row]="expandedElement === element"
+        (click)="expandedElement = expandedElement === element ? null : element">
+    </tr>
+    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
+
+    <!-- Row shown when there is no matching data. -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="ma t-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr>
+  </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of requests"></mat-paginator>
+  </div>
 </section>
