--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,15 +1,14 @@
 <section class="admin-panel">
   <span class="text-color title roboto-regular">{{ 'sidenav.adminPanel' | translate }}</span>
-  <p>{{ 'admin.msg' | translate }}</p>
   <section>
     <div class="button-row">
       <button mat-raised-button [routerLink]="['/adduser']">{{ 'admin.addUserBtn' | translate }}</button>
     </div>
   </section>
-  <mat-form-field>
+  <!-- <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. SAMU" #input>
-  </mat-form-field>
+  </mat-form-field> -->
 
   <div class="mat-elevation-z8" class="user-table">
     <table mat-table [dataSource]="dataSource" matSort>
@@ -53,7 +52,7 @@
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        <td class="mat-cell" colspan="4">No data matching the filter</td>
       </tr>
     </table>
 
