--- a/src/app/firefighter/firefighter.component.html
+++ b/src/app/firefighter/firefighter.component.html
@@ -3,11 +3,10 @@
     <span class="text-color title roboto-regular">{{ 'sidenav.firefighterPanel' | translate }}</span>
     <img src="assets/icons/firefighter.svg" alt="Firefighter Icon" class="title-icon">
   </div>
-  <p>{{ 'firefighter.msg' | translate }}</p>
-  <mat-form-field>
+  <!-- <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. SAMU" #input>
-  </mat-form-field>
+  </mat-form-field> -->
 
   <div class="mat-elevation-z8" class="police-table">
     <table mat-table
@@ -63,10 +62,10 @@
         <div class="element-detail"
              [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
           <div class="element-requester-details">
-            <p><strong>{{ 'view-notifications.expanded.description' | translate }}</strong> {{element.description}}</p>
-            <p><strong>{{ 'view-notifications.expanded.cpf' | translate }}</strong> {{element.requester.cpf}}</p>
-            <p><strong>{{ 'view-notifications.expanded.phone' | translate }}</strong> {{element.requester.phone}}</p>
-            <p><strong>{{ 'view-notifications.expanded.address' | translate }}</strong> {{element.requester.address}}</p>
+            <p class="text-color"><strong>{{ 'view-notifications.expanded.description' | translate }}</strong> {{element.description}}</p>
+            <p class="text-color"><strong>{{ 'view-notifications.expanded.cpf' | translate }}</strong> {{element.requester.cpf}}</p>
+            <p class="text-color"><strong>{{ 'view-notifications.expanded.phone' | translate }}</strong> {{element.requester.phone}}</p>
+            <p class="text-color"><strong>{{ 'view-notifications.expanded.address' | translate }}</strong> {{element.requester.address}}</p>
           </div>
         </div>
       </td>
@@ -82,7 +81,7 @@
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="ma t-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      <td class="ma t-cell" colspan="4">No data matching the filter</td>
     </tr>
   </table>
 
