--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -93,10 +93,14 @@
   }
 
   .notification-section {
-    height: 75%;
+    height: 100%;
     width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
   }
 
   .action-section {
