--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <section class="main-container">
-  <img src="../../assets/images/wallpaper-login.gif">
+  <img src="../../assets/images/bkg.jpg">
   <section class="login-container">
     <div class="login-frame">
       <div class="login-title-frame">
