--- a/src/app/shared/language-selector/language-selector.component.html
+++ b/src/app/shared/language-selector/language-selector.component.html
@@ -1,5 +1,5 @@
 <div class="language-selector">
-  <button mat-icon-button class="language-icon" [matMenuTriggerFor]="languageMenu">
+  <button mat-icon-button class="language-icon" [matMenuTriggerFor]="languageMenu" class="text-color">
     <mat-icon>language</mat-icon>
   </button>
   <mat-menu #languageMenu="matMenu">
